--- a/FT_of_basic_signals.ipynb
+++ b/FT_of_basic_signals.ipynb
@@ -277,38 +277,52 @@
     }
    ],
    "source": [
-    "def sgn_fun(amp,t):\n",
+    "\n",
+    "def sgn_fun(amp, t):\n",
+    "    # Function to generate signum function values for each element in time array\n",
     "    sgn_t = []\n",
     "    for i in range(len(t)):\n",
-    "        if(t[i]>0):\n",
+    "        if(t[i] > 0):\n",
     "            sgn_t.append(amp)\n",
-    "        elif(t[i]==0):\n",
+    "        elif(t[i] == 0):\n",
     "            sgn_t.append(0)\n",
-    "        else : \n",
+    "        else:\n",
     "            sgn_t.append(-amp)\n",
     "    return sgn_t\n",
     "\n",
-    "dur = 10\n",
-    "sr = 10000\n",
-    "t = np.linspace(-dur,dur,sr*dur*2+1)\n",
-    "sgn_t = sgn_fun(1,t)\n",
-    "fft_sgn_t  = np.fft.fftshift(np.fft.fft(sgn_t))\n",
-    "freq = np.fft.fftshift(np.fft.fftfreq(len(fft_sgn_t),1/sr))\n",
-    "plt.figure(figsize = [12,3])\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.title(\"signum function\")\n",
-    "plt.xlabel(\"time (in sec)\")\n",
-    "plt.ylabel(\"Amplitude\")\n",
-    "plt.plot(t,sgn_t)\n",
+    "# Parameters\n",
+    "dur = 10         # Duration in seconds\n",
+    "sr = 10000       # Sampling rate in Hz\n",
     "\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.title(\"FT of signum function\")\n",
-    "plt.xlabel(\"frequency (in Hz)\")\n",
-    "plt.ylabel(\"Amplitude\")\n",
-    "plt.stem(freq,np.abs(fft_sgn_t)/sr)\n",
-    "plt.show()\n",
+    "# Time array\n",
+    "t = np.linspace(-dur, dur, sr * dur * 2 + 1)\n",
     "\n",
-    "\n"
+    "# Generate signum function values\n",
+    "sgn_t = sgn_fun(1, t)\n",
+    "\n",
+    "# Compute FFT of the signum function\n",
+    "fft_sgn_t = np.fft.fftshift(np.fft.fft(sgn_t))\n",
+    "\n",
+    "# Frequency array for plotting the FFT\n",
+    "freq = np.fft.fftshift(np.fft.fftfreq(len(fft_sgn_t), 1/sr))\n",
+    "\n",
+    "# Plotting the signum function and its FFT\n",
+    "plt.figure(figsize=[12, 3])\n",
+    "\n",
+    "# Plotting the signum function\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.title(\"Signum function\")\n",
+    "plt.xlabel(\"Time (in sec)\")\n",
+    "plt.ylabel(\"Amplitude\")\n",
+    "plt.plot(t, sgn_t)\n",
+    "\n",
+    "# Plotting the FFT of the signum function\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.title(\"FT of Signum function\")\n",
+    "plt.xlabel(\"Frequency (in Hz)\")\n",
+    "plt.ylabel(\"Amplitude\")\n",
+    "plt.stem(freq, np.abs(fft_sgn_t) / sr)  # Using stem plot for better visualization\n",
+    "plt.show()\n"
    ]
   },
   {
